# sleo_ws

./: CHANGELOG.rst  Readme.md
sleo_apps/: README.md
sleo_apps/sleo_apps/: CHANGELOG.rst  CMakeLists.txt  package.xml
sleo_apps/sleo_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
sleo_apps/sleo_navigation/env-hooks/: 55.sleo-navigation.sh.em
sleo_apps/sleo_navigation/launch/: gmapping_demo.launch  move_base.launch
sleo_apps/sleo_navigation/launch/includes/: sicklmsxx_amcl.launch  sicklmsxx_gmapping.launch  velocity_smoother.launch.xml
sleo_apps/sleo_navigation/maps/: map_201606031530.pgm
sleo_apps/sleo_navigation/param/: dwa_local_planner_params.yaml
sleo_apps/sleo_navigation/param/sicklmsxx/: sicklmsxx_costmap_common_params.yaml  sicklmsxx_global_costmap_params.yaml  sicklmsxx_local_costmap_params.yaml
sleo_apps/sleo_teleop/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sleo_apps/sleo_teleop/launch/: keyboard_teleop.launch  logitech.launch  ps3_teleop.launch  xbox360_teleop.launch
sleo_apps/sleo_teleop/launch/includes/: velocity_smoother.launch.xml
sleo_apps/sleo_teleop/scripts/: sleo_teleop_key
sleo_apps/sleo_teleop/src/: sleo_joy.cpp  sleo_xbox_joy.cpp
sleo_arm/: README.md
sleo_arm/sleo_arm/: CHANGELOG.rst  CMakeLists.txt  package.xml
sleo_desktop/: README.md
sleo_desktop/sleo_dashboard/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
sleo_desktop/sleo_dashboard/include/sleo_dashboard/: sleo_dashboard.h
sleo_desktop/sleo_dashboard/plugins/: plugin.xml
sleo_desktop/sleo_dashboard/scripts/: sleo_dashboard
sleo_desktop/sleo_dashboard/src/sleo_dashboard/: sleo_dashboard.cpp  sleo_dashboard.ui
sleo_desktop/sleo_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
sleo_desktop/sleo_testsuite/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
sleo_desktop/sleo_testsuite/plugins/: plugin.xml
sleo_desktop/sleo_testsuite/resource/ui/: angular_error.ui  angular_speed.ui  linear_error.ui  linear_speed.ui  plot_configuration.ui  table_configuration.ui  testsuite_top.ui
sleo_desktop/sleo_testsuite/scripts/: sleo_testsuite
sleo_desktop/sleo_testsuite/src/sleo_testsuite/: angular_error.py  angular_error_frame.py  angular_speed.py  angular_speed_frame.py  linear_error.py  linear_error_frame.py  linear_speed.py  linear_speed_frame.py  linear_speed_frame.pyc.orig  plot_configuration_frame.py  sleo_testsuite_plugin.py  sleo_testsuite_widget.py  table_configuration_frame.py  text.qrc
sleo_desktop/sleo_testsuite/src/sleo_testsuite/text/: linear_error.html
sleo_desktop/sleo_viz/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sleo_desktop/sleo_viz/launch/: view_model.launch  view_navigation.launch  view_robot.launch  view_velodyne.launch
sleo_desktop/sleo_viz/rviz/: model.rviz  robot.rviz  velodyne.rviz
sleo_driver/: .README.md.swp  README.md
sleo_driver/sleo_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
sleo_driver/sleo_driver/include/sleo_driver/: controller.h  sleo_hardware.h  transport.h
sleo_driver/sleo_driver/launch/: example.launch
sleo_driver/sleo_driver/src/: CMakeLists.txt  controller.cpp  driver.cpp  sleo_hardware.cpp
sleo_robot/: README.md
sleo_robot/sleo_bringup/: CHANGELOG.rst  CMakeLists.txt  TODO  package.xml
sleo_robot/sleo_bringup/env-hooks/: 55.sleo.sh.em
sleo_robot/sleo_bringup/launch/: minimal.launch  sensor.launch
sleo_robot/sleo_bringup/launch/includes/: description.launch.xml  mobile_base.launch.xml  robot.launch.xml
sleo_robot/sleo_bringup/launch/includes/3dsensor/: 32.launch.xml  d415.launch.xml
sleo_robot/sleo_bringup/launch/includes/arm/: ur5.launch.xml
sleo_robot/sleo_bringup/launch/includes/laser/: sicklmsxx.launch.xml
sleo_robot/sleo_bringup/launch/includes/sleo/: mobile_base.launch.xml
sleo_robot/sleo_bringup/param/: smoother.yaml
sleo_robot/sleo_bringup/param/laser/sicklmsxx/: laser.yaml
sleo_robot/sleo_bringup/scripts/: create_udev_rules
sleo_robot/sleo_bringup/udev/: 57-sleo-screen.rules  57-sleo.rules
sleo_robot/sleo_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
sleo_robot/sleo_control/config/: control.yaml  localization.yaml
sleo_robot/sleo_control/launch/: control.launch
sleo_robot/sleo_control/scripts/: reset_ur5.py
sleo_robot/sleo_description/: CMakeLists.txt  README.md  package.xml
sleo_robot/sleo_description/launch/: view_model.launch
sleo_robot/sleo_description/meshes/: axle.stl  bonnet.stl  chassis.stl  wheel.stl
sleo_robot/sleo_description/meshes/sensors/: d415.stl  sick.stl  sick_lmsxx.stl  velodyne_hdl32e.stl
sleo_robot/sleo_description/robots/: sleo.urdf.xacro
sleo_robot/sleo_description/urdf/: common_properties.urdf.xacro  sleo.urdf.xacro  sleo_gazebo.urdf.xacro  sleo_library.urdf.xacro  sleo_properties.urdf.xacro  wheel.urdf.xacro
sleo_robot/sleo_description/urdf/sensors/: d415.urdf.xacro  gps.urdf.xacro  sick_lmsxx.urdf.xacro  velodyne.urdf.xacro
sleo_robot/sleo_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
sleo_robot/sleo_screen_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
sleo_robot/sleo_screen_driver/include/sleo_screen_driver/: serial.hpp  sleo_screen_driver.hpp
sleo_robot/sleo_screen_driver/launch/: standalone.launch
sleo_robot/sleo_screen_driver/plugins/: nodelets.xml
sleo_robot/sleo_screen_driver/src/: serial.cpp  sleo_screen_driver.cpp  sleo_screen_driver_node.cpp
sleo_sensors_driver/: README.md
sleo_sensors_driver/sleo_sensors_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
sleo_simulator/sleo_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
sleo_simulator/sleo_gazebo/env-hooks/: 55.sleo-gazebo.sh.em
sleo_simulator/sleo_gazebo/launch/: amcl_demo.launch  gmapping_demo.launch  sleo_playpen.launch
sleo_simulator/sleo_gazebo/launch/includes/: robot.launch.xml  sleo_empty_world.launch  spawn_sleo.launch
sleo_simulator/sleo_gazebo/maps/: soy_playgen.pgm  soy_playgen.yaml
sleo_simulator/sleo_gazebo/worlds/: soy_playgen.world
sleo_simulator/sleo_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+32 files in other folders)
