<?xml version="1.0"?>
<package>
  <name>sleo_navigation</name>
  <version>0.0.1</version>
  <description>Autonomous mapping and navigation demos for the Soy Sleo</description>

  <author email="carlzhang@soyrobotics.com">Carl</author>

  <maintainer email="zl@soyrobotics.com">Long Zhang</maintainer>

  <url type="website">http://wiki.ros.org/sleo_navigation</url>
  <url type="bugtracker">https://github.com/Soy-Robotics/sleo_apps/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/sleo_apps</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sleo_bringup</run_depend>

  <export>
  </export>
</package>
