<?xml version="1.0"?>
<package>
  <name>sleo_arm</name>
  <version>0.0.1</version>

  <description>Metapackage for Soy Sleo robot software</description>

  <maintainer email="zl@soyrobotics.com">Long Zhang</maintainer>
  <author email="carlzhang@soyrobotics.com">Carl</author>

  <license>BSD</license>
  <url type="bugtracker">https://github.com/Soy-Robotics/sleo_arm/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/sleo_arm</url>
  <url type="website">http://wiki.ros.org/sleo_arm</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>sleo_ur5_moveit_config</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
