<?xml version="1.0"?>
<package>
  <name>sleo_testsuite</name>
  <version>0.0.1</version>
  <description> A rqt gui plugins manager for sleo testsuite. </description>

  <maintainer email="zl@soyrobotics.com">Long Zhang</maintainer>
  <author>Carl Zhang</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/sleo_testsuite</url>
  <url type="repository">https://github.com/Sleo/sleo_desktop</url>
  <url type="bugtracker">https://github.com/Sleo/sleo_desktop/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>rqt_topic</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugins/plugin.xml" />
  </export>
</package>
