<?xml version="1.0"?>
<package>
  <name>sleo_driver</name>
  <version>0.2.0</version>
  <description>The sleo_driver package</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sleo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>

  <run_depend>sleo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>

  <export>
  </export>
</package>
