<?xml version="1.0"?>
<package>
  <name>sleo_control</name>
  <version>0.0.1</version>

  <description>SawYer sleo controller configurations</description>

  <author email="carlzhang@soyrobotics.com">Carl</author>
  <maintainer email="zl@soyrobotics.com">Long Zhang</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/sleo_control</url>
  <url type="bugtracker">https://github.com/Soy-Robotics/sleo_robot/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/sleo_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>imu_sensor_controller</run_depend>


  <export>
  </export>
</package>
