<?xml version="1.0"?>
<package>
  <name>sleo_screen_driver</name>
  <version>0.0.1</version>
  <description>The sleo_screen_driver package for sending data of motor driver to Sleo screen</description>

  <author email="carlzhang@soyrobotics.com">Carl</author>
  <maintainer email="zl@soyrobotics.com">Long Zhang</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/Soy-Robotics/sleo_robot/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/sleo_robot</url>
  <url type="website">http://wiki.ros.org/sleo_screen_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>sleo_msgs</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>ecl_threads</run_depend>
  <run_depend>sleo_msgs</run_depend>

  <export> 
    <nodelet plugin="${prefix}/plugins/nodelets.xml" />
  </export>
</package>
