<?xml version="1.0"?>
<package>
  <name>sleo_sensors_driver</name>
  <version>0.0.1</version>

  <description>Metapackage for Soy Sleo sensor driver</description>

  <maintainer email="zl@soyrobotics.com">Long Zhang</maintainer>
  <author email="carlzhang@soyrobotics.com">Carl</author>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/Soy-Robotics/sleo_sensors_driver/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/sleo_sensors_driver</url>
  <url type="website">http://wiki.ros.org/sleo_sensors_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>velodyne</run_depend>
  <run_depend>velodyne_driver</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
