<?xml version="1.0"?>
<package>
  <name>sleo_gazebo</name>
  <version>0.0.1</version>
  <description>Soy sleo simulator bringup</description>

  <author email="carlzhang@soyrobotics.com">Carl</author>

  <maintainer email="zl@soyrobotics.com">Long Zhang</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/sleo_gazebo</url>
  <url type="bugtracker">https://github.com/Soy-Robotics/sleo_simulator/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/sleo_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>sleo_control</run_depend>
  <run_depend>sleo_description</run_depend>
  <run_depend>sleo_navigation</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
  </export>
</package>
