<?xml version="1.0"?>
<package>
  <name>sleo_simulator</name>
  <version>0.0.1</version>
  <description>Metapackage for Soy Sleo simulation software</description>

  <maintainer email="zl@soyrobotics.com">Long Zhang</maintainer>

  <url type="website">http://wiki.ros.org/sleo_simulator</url>
  <url type="bugtracker">https://github.com/Soy-Robotics/sleo_simulator/issues</url>
  <url type="repository">https://github.com/Soy-Robotics/sleo_simulator</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>sleo_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
